--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang='ru>
 <head>
@@ -6,5 +7,8 @@
 </head>
 <body>
     <h1>Hello, World!</h1>
+    <p>Привет!</p>
+    <p>Это Алгоритмика :)</p>
 </body>
 </html>
+             
